# hwcodec

./: .gitignore  Cargo.toml  build.rs  compile_all.bat  compile_amf_encode.bat  compile_amf_encode_simple.bat
cpp/: amf_bridge.cpp  amf_bridge.h  mfx_bridge.cpp  mfx_bridge.h  nv_bridge.cpp  nv_bridge.h
cpp/amf/: amf_bridge.h  amf_common.cpp  amf_decode.cpp  amf_encode.cpp  amf_wrapper.cpp  amf_wrapper.h
cpp/common/: common.h  log.cpp  log.h  system.h  util.cpp  util.h
cpp/common/platform/win/: WIN_ANALYSIS.md  win.cpp  win.h  win_rust_ffi.h  win_rust_wrapper.h
cpp/mfx/: mfx_bridge.h  mfx_decode.cpp  mfx_encode.cpp  mfx_wrapper.cpp  mfx_wrapper.h
cpp/nv/: nv_bridge.h  nv_decode.cpp  nv_decode_rust_example.cpp.patch  nv_encode.cpp  nv_wrapper.cpp  nv_wrapper.h
docs/: AMF_HEVC_REFERENCE.md  CPP_RUST_DIFFERENCES.md  IMPLEMENTATION_STATUS.md  REFACTORING_PLAN.md  TESTING_GUIDE.md
examples/: available.rs  color_to_h264.rs  color_to_h265.rs  encode_test_texture.rs  pipeline_vram.rs
scripts/: compile_all.bat  compile_amf_encode.bat  compile_amf_encode_simple.bat  compile_amf_wrapper.bat  compile_mfx_wrapper.bat  compile_nv_wrapper.bat
src/: common.rs  lib.rs
src/platform/win/: adapter.rs  bmp.rs  device.rs  dump.rs  error.rs  ffi.rs  format_conversion.rs  mod.rs  shader.rs  texture.rs  utils.rs  video_processor.rs
src/vram/: amf.rs  amf_bridge.rs  amf_rust.rs  decode.rs  encode.rs  inner.rs  mfx.rs  mfx_bridge.rs  mfx_rust.rs  mod.rs  nv.rs  nv_bridge.rs  nv_rust.rs
tests/: README.md  platform_win_tests.rs
