[package]
name = "hwcodec"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
cxx = "1.0.194"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
cc = "1.0"
cxx-build = "1.0.194"

[dev-dependencies]
env_logger = "0.10"
rand = "0.8"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
